# wavefoam

./: Cargo.toml
benches/: peaks_f32.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  peaks.rs
crates/core/src/peaks/: f32.rs
crates/iced/: Cargo.toml
crates/skia/: Cargo.toml
crates/skia/examples/hello/: canvas.rs  main.rs
crates/skia/src/: lib.rs
crates/wgpu/: Cargo.toml
crates/wgpu/examples/: window.rs
crates/wgpu/src/: basic.wgsl  lib.rs  peak_texture.rs
iced/: Cargo.toml
src/: lib.rs  peaks.rs  scan.rs  utils.rs
src/peaks/: f32.rs
